<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_gradient"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"

            android:layout_marginTop="35dp"
            android:background="@color/zxing_transparent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031"
            app:srcCompat="@drawable/profile"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="329dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#FEF9F3"
            android:hint="Name:"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.088" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="329dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#FEF9F3"
            android:hint="Email: "
            android:inputType="textEmailAddress"

            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_phone" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="329dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#FEF9F3"
            android:hint="Phone No: "
            android:inputType="phone"

            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <EditText
            android:id="@+id/profile_home"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#FEF9F3"
            android:hint="Home: "

            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_back"
            android:layout_width="125dp"
            android:layout_height="43dp"

            android:layout_marginTop="30dp"
            android:background="@drawable/light_round_button"
            android:text="Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_home" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_save"
            android:layout_width="125dp"
            android:layout_height="43dp"


            android:layout_marginTop="30dp"
            android:background="@drawable/light_round_button"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_home" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profile_remove_pic"
            android:layout_width="125dp"
            android:layout_height="43dp"

            android:layout_marginTop="30dp"
            android:background="@drawable/light_round_button"
            android:text="Remove Pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_save"
            app:layout_constraintTop_toBottomOf="@+id/profile_home" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
