...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/baseline_arrow_back_24" />


    <ImageButton
        android:id="@+id/buttonAttendeeProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="320dp"
        android:background="@drawable/user__1_"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/menuButtonMyEvents"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginStart="320dp"
        android:background="@drawable/baseline_menu_24"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
...
