...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAttendee"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_shape"
                android:fontFamily="@font/inter_medium"
                android:text="ATTENDEE"
...
