...
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/event_poster_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_above="@id/SignupEvents"
                android:layout_below="@id/attendeeCapacity"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
...
